--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-  <nav class="menu azul">
+  <nav class="menu">
     <ul>
       <li><a href="#animais">Animais</a></li>
       <li><a href="#faq">Faq</a></li>
@@ -17,11 +17,11 @@
       <li><a href="https://www.origamid.com/">Dev →</a></li>
     </ul>
   </nav>
-  <section class="grid-section animais" id="animais" data-texto="Teste">
+  <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
     <ul class="animais-lista">
       <li>
-        <img src="img/imagem1.jpg" alt="Raposa">
+        <img src="img/imagem1.jpg">
       </li>
       <li>
         <img src="img/imagem2.jpg">
