--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <section class="grid-section animais" id="animais">
     <h1 class="titulo">Animais Fantásticos</h1>
     <ul class="animais-lista">
+      <!-- Teste comentário -->
       <li>
         <img src="img/imagem1.jpg">
       </li>
